--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>My Webpage</title>
-    <link rel="iframely" href="https://app.graswald.ai/embed/variants/22" media="(aspect-ratio: 1280/720)">
+    <link rel="iframely" href="https://app.graswald.ai/embed/variants/22" media="(aspect-ratio: 1280/720)" />
 </head>
 <body>
     <!-- Your webpage content goes here -->
